Point users at per-app protection and make compatibility exclusions global
Two independent blocking-UX simplifications.

Timeline hint: users notice an app breaking at the OS level and do not know
where the fix lives. Add a one-time dismissible banner above the timeline
entries pointing at them; it shows only once entries exist, and dismisses
itself on the first visit to an app's Details screen.

Compatibility VPN exclusions: DuckDuckGo's known VPN-incompatible apps were
auto-excluded only in minimal mode, and switching to standard or strict
reversed that. Those apps now stay excluded in every mode unless the user
explicitly includes them. The restore trigger becomes "the app left the DDG
list" rather than "the mode changed", so syncVpnExclusions no longer takes a
mode and syncModeExclusions becomes syncAutoExclusions. XML import now
reconciles the imported apply preferences with the auto-excluded bookkeeping
immediately instead of at the next process start.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>